<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/maingreenbackground"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11"
        android:background="@drawable/maingreenbackground"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
             >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffffff"
                android:textSize="60sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4.5" >

            <Button
                android:id="@+id/button1"
                style="@style/mainbutton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70.0dip"
                android:layout_marginRight="70.0dip"
                android:text="@string/usual_button_name" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button2"
            style="@style/partbutton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_green_back"
            android:text="@string/button2_name" />

        <Button
            android:id="@+id/button33"
            style="@style/partbutton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_green_back"
            android:text="@string/button3_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button44"
            style="@style/partbutton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_green_back"
            android:text="@string/button4_name" />

        <Button
            android:id="@+id/button55"
            style="@style/partbutton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_green_back"
            android:text="@string/button5_name" />
    </LinearLayout>

</LinearLayout>